--- a/index.html
+++ b/index.html
@@ -63,20 +63,39 @@
         </section>
 
         <!-- One -->
-        <section id="one" class="main style1">
+
+        <section id="one" class="main style1" style="padding-top:0px">
             <div class="container">
+                <center>
+                    <header class="major">
+                        <h2>Work Experience</h2>
+                    </header>
+                </center>
                 <div class="row gtr-150">
                     <div class="col-6 col-12-medium">
                         <header class="major">
                             <h2>
-                                Lorem ipsum dolor adipiscing<br />
-                                amet dolor consequat
+                                Expedia
                             </h2>
+                            <h3>
+                                Software Development Intern <br />(June 2018 - August 2018)
+                            </h3>
                         </header>
-                        <p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
+                        <p>
+                            As part of the Expedia Search and Suggest Team, I worked on both front-end and back-end capabilities to improve Expedia's homepage search experience. I used Java, JavaScript, and HTML/CSS to develop features such as:
+                            <ol>
+                                <li>Categorizing the types of suggestions displayed so that in inline search suggestions, the user can distinguish between SEA as a city abbreviation and SEA as an airport code</li>
+                                <li>A customer feedback tool for the quality of search results</li>
+                                <li>Eliminating the unnecessary need for the user to explicitly grant location access to Expedia in the current location feature by creating a heuristic based current location option</li>
+                            </ol>
+                            
+                            About 700,000 customers per week interact with the features I built. I also participated in Expedia Hackathon 7.0 and had 4th most popular project.
+
+                        </p>
                     </div>
                     <div class="col-6 col-12-medium imp-medium">
-                        <span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+                        <span class="image fit"><img src="images/expedia1.png" alt="" /></span>
+                        <span class="image fit"><img src="images/expedia2.png" alt="" /></span>
                     </div>
                 </div>
             </div>
