--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </div>
                     <div class="col-6 col-12-medium imp-medium">
                         <span class="image fit"><img src="images/expedia1.png" alt="" /></span>
-                        <span class="image fit"><img src="images/expedia2.png" alt="" /></span>
+                        <span class="image fit"><img src="images/expedia2.PNG" alt="" /></span>
                     </div>
                 </div>
             </div>
