--- a/index.html
+++ b/index.html
@@ -34,10 +34,15 @@
                     <div class="col-4 col-12-medium">
                         <span class="image fit"><img src="images/signify2.png" alt="" /></span>
                         <h3>Sign-ify</h3>
-                        <p>The iOS app Sign-ify, developed for CalHacks 6.0, enables enhanced live-lecture for members 
-                        of the ASL-speaking community by intelligently converting a professor's speech to a sequence of ASL videos for 
-                        the user to watch during lecture. This style of real-time audio to ASL conversion has never been done before, 
-                        and the app bridges the educational barrier that exists in the deaf and hard-of-hearing community.</p>
+                        <p>
+                            The iOS app Sign-ify, developed for CalHacks 6.0, enables enhanced live-lecture for members
+                            of the hearing-impaired community by intelligently converting a professor's speech to a sequence of American Sign Language (ASL) videos for
+                            the user to watch during lecture. There is a dissonance in grammatical structure and syntax between written language and
+                            ASL (reading in english rather than ASL is akin to reading in a non-native language). Sign-ify is able to translate professors’ dictation to 
+                            pre-recorded ASL videos in near-real time, eliminating the need for students to interpret written English and having to “translate it” into ASL as they process information.
+
+                            <br /> <br />Sign-ify was an award winning project at CalHacks 6.0! Please check out the DevPost for more information
+                        </p>
                         <ul class="actions special">
                             <li><a href="https://devpost.com/software/voice-to-asl-for-enhanced-education-through-webcasts" class="button">More Information</a></li>
                         </ul>
@@ -71,31 +76,33 @@
                         <h2>Work Experience</h2>
                     </header>
                 </center>
-                <div class="row gtr-150">
-                    <div class="col-6 col-12-medium">
-                        <header class="major">
-                            <h2>
-                                Expedia
-                            </h2>
-                            <h3>
-                                Software Development Intern <br />(June 2018 - August 2018)
-                            </h3>
-                        </header>
-                        <p>
-                            As part of the Expedia Search and Suggest Team, I worked on both front-end and back-end capabilities to improve Expedia's homepage search experience. I used Java, JavaScript, and HTML/CSS to develop features such as:
-                            <ol>
-                                <li>Categorizing the types of suggestions displayed so that in inline search suggestions, the user can distinguish between SEA as a city abbreviation and SEA as an airport code</li>
-                                <li>A customer feedback tool for the quality of search results</li>
-                                <li>Eliminating the unnecessary need for the user to explicitly grant location access to Expedia in the current location feature by creating a heuristic based current location option</li>
-                            </ol>
-                            
-                            About 700,000 customers per week interact with the features I built. I also participated in Expedia Hackathon 7.0 and had 4th most popular project.
+                <div>
+                    <div class="row gtr-150">
+                        <div class="col-6 col-12-medium">
+                            <header class="major">
+                                <h2>
+                                    Expedia
+                                </h2>
+                                <h3>
+                                    Software Development Intern <br />(June 2018 - August 2018)
+                                </h3>
+                            </header>
+                            <p>
+                                As part of the Expedia Search and Suggest Team, I worked on both front-end and back-end capabilities to improve Expedia's homepage search experience. I used Java, JavaScript, and HTML/CSS to develop features such as:
+                                <ol>
+                                    <li>Categorizing the types of suggestions displayed so that in inline search suggestions, the user can distinguish between SEA as a city abbreviation and SEA as an airport code</li>
+                                    <li>A customer feedback tool for the quality of search results</li>
+                                    <li>Eliminating the unnecessary need for the user to explicitly grant location access to Expedia in the current location feature by creating a heuristic based current location option</li>
+                                </ol>
 
-                        </p>
-                    </div>
-                    <div class="col-6 col-12-medium imp-medium">
-                        <span class="image fit"><img src="images/expedia1.png" alt="" /></span>
-                        <span class="image fit"><img src="images/expedia2.PNG" alt="" /></span>
+                                About 700,000 customers per week interact with the features I built. I also participated in Expedia Hackathon 7.0 and had 4th most popular project.
+
+                            </p>
+                        </div>
+                        <div class="col-6 col-12-medium imp-medium">
+                            <span class="image fit"><img src="images/expedia1.png" alt="" /></span>
+                            <span class="image fit"><img src="images/expedia2.PNG" alt="" /></span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -473,7 +480,7 @@
                 <li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
             </ul>
             <ul class="copyright">
-                <li>&copy; Untitled</li>
+                <li>&copy; Pranav Sukumar</li>
                 <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
             </ul>
         </section>
