SMS Proj Details
added section for speech matrix solver project

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                         </ul>
                     </div>
                     <div class="col-4 col-12-medium">
-                        <span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-                        <h3>Magna feugiat lorem</h3>
-                        <p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+                        <span class="image fit"><img src="images/sms2.png" alt="" /></span>
+                        <h3 style = "padding-top: 8.5%">Speech Matrix Solver</h3>
+                        <p>Speech Matrix Solver is a web application my team and I built in order to solve complex systems of equations by performing Gaussian Elimination on an augmented matrix which is an input spoken by the user. Both the Gaussian Elimination backend and frontend were built from the groud up using JavaScript and HTML5.</p>
                         <ul class="actions special">
-                            <li><a href="#" class="button">More</a></li>
+                            <li><a href="https://github.com/ashwatc/SpeechMatrixSolver" class="button">GitHub Repository</a></li>
                         </ul>
                     </div>
                     <div class="col-4 col-12-medium">
