--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
                     <strong>Pranav Sukumar </strong><br />
                     UC Berkeley Electrical Engineering and Computer Science (EECS) 2023
                 </h1>
+                <ul class="actions special">
+                    <li><a href="assets/ResumeBerkeleyV08.pdf" class="button">Resume</a></li>
+                </ul>
+
             </div>
         </section>
 
