added electoral map proj

--- a/index.html
+++ b/index.html
@@ -59,14 +59,16 @@
                             <li><a href="https://github.com/ashwatc/SpeechMatrixSolver" class="button">GitHub Repository</a></li>
                         </ul>
                     </div>
+                    
                     <div class="col-4 col-12-medium">
-                        <span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-                        <h3>Magna feugiat lorem</h3>
-                        <p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+                        <span class="image fit"><img src="images/electoral-map-blended.PNG" alt="" /><img src="images/electoral-map.PNG" alt="" /></span>
+                        <h3 style = "padding-top: 5%">Electoral Insights Maps</h3>
+                        <p>This is a Java Program I wrote to analyze prior election data to generate electoral college maps using Standard Draw. Users can create maps for each state and the country with election data from each county going back 60 years! Users can choose to create a traditional "Red and Blue" map or a blended map to show election insights.</p>
                         <ul class="actions special">
-                            <li><a href="#" class="button">More</a></li>
+                            <li><a href="https://github.com/Pranav-Sukumar/ElectoralMaps" class="button">GitHub Repository</a></li>
                         </ul>
                     </div>
+                    
                 </div>
             </div>
         </section>
