small screen bug fixes

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 </head>
 <body class="is-preload">
     <ul style="list-style-type: none; margin: 0; padding: 0; overflow: hidden; background-color: #333">
-        <li style="border-right: 1px solid white; float: left;display: block; color: white; text-align: center; padding: 20px 16px; text-decoration: none"><a href="#home">Home</a></li>
-        <li style="border-right: 1px solid white; float: left;display: block; color: white; text-align: center; padding: 20px 16px; text-decoration: none"><a href="#about">About Me</a></li>
+        <li style="border-right: 1px solid white; float: left;display: block; color: white; text-align: center; padding: 20px 10px; text-decoration: none"><a href="#home">Home</a></li>
+        <li style="border-right: 1px solid white; float: left;display: block; color: white; text-align: center; padding: 20px 10px; text-decoration: none"><a href="#about">About Me</a></li>
 
-        <li style="border-right: 1px solid white; float: left;display: block; color: white; text-align: center; padding: 20px 16px; text-decoration: none"><a href="#projects">Projects</a></li>
-        <li style="border-right: 1px solid white; float: left;display: block; color: white; text-align: center; padding: 20px 16px; text-decoration: none"><a href="#work">Work Experience</a></li>
+        <li style="border-right: 1px solid white; float: left;display: block; color: white; text-align: center; padding: 20px 10px; text-decoration: none"><a href="#projects">Projects</a></li>
+        <li style="border-right: 1px solid white; float: left;display: block; color: white; text-align: center; padding: 20px 10px; text-decoration: none"><a href="#work">Experience</a></li>
     </ul>
     <!-- Header -->
     <section id="header">
@@ -41,7 +41,7 @@
 
             <img src="images/headshot.png" width="246.400" height=369.600" align="left">
              <h2><b>About Me</b></h2>
-             <p style="text-align:left; padding-left:270px">
+             <p style="text-align:left; padding-left:325px">
                  Hi! I am a freshman at UC Berkeley student studying Electrical Engineering & Computer Sciences from Seattle, Washington.
                  I have a wide range of skills and interest areas, concentrated in software and hardware design.
                  I'm currently fascinated by Machine Learning and Big Data, and their applications to cutting edge technology.
