refactored code to make compatible on smaller devices

--- a/index.html
+++ b/index.html
@@ -38,24 +38,29 @@
 
     <section id="three" class="main style1 special">
         <div class="container" id="about">
+            <div class="row gtr-150">
+                <div class="col-6 col-12-medium" style="width: 300px">
+                    <img src="images/headshot.png" width="271.040" height=405.900" align="left">
+                </div>
+                <div class="col-6 col-12-medium">
+                    <h2><b>About Me</b></h2>
+                    <p style="text-align:left">
+                        Hi! I am a freshman at UC Berkeley student studying Electrical Engineering & Computer Sciences from Seattle, Washington.
+                        I have a wide range of skills and interest areas, concentrated in software and hardware design.
+                        I'm currently fascinated by Machine Learning and Big Data, and their applications to cutting edge technology.
+                        </br>
+                        </br>
+                        <b>Email: </b> &nbsp; &nbsp; <a href="mailto:pranavsukumar@berkeley.edu">pranavsukumar@berkeley.edu</a>
+                        </br>
+                        </br>
+                        <b>LinkedIn: </b> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/pranav-sukumar/">https://www.linkedin.com/in/pranav-sukumar/</a>
 
-            <img src="images/headshot.png" width="271.04" height=405.900" align="left">
-             <h2><b>About Me</b></h2>
-             <p style="text-align:left; padding-left:375px">
-                 Hi! I am a freshman at UC Berkeley student studying Electrical Engineering & Computer Sciences from Seattle, Washington.
-                 I have a wide range of skills and interest areas, concentrated in software and hardware design.
-                 I'm currently fascinated by Machine Learning and Big Data, and their applications to cutting edge technology.
-                 </br>
-                 </br>
-                 <b>Email: </b> &nbsp; &nbsp; <a href="mailto:pranavsukumar@berkeley.edu">pranavsukumar@berkeley.edu</a>
-                 </br>
-                 </br>
-                 <b>LinkedIn: </b> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/pranav-sukumar/">https://www.linkedin.com/in/pranav-sukumar/</a>
-
-             </p>
-
+                    </p>
+                </div>
+            </div>
+                
         </div>
-    </section>
+</section>
 
 
     <section id="three" class="main style1 special">
