still working on phone screen bug

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="col-6 col-12-medium">
                     <h2><b>About Me</b></h2>
-                    <p style="text-align:left">
+                    <p>
                         Hi! I am a freshman at UC Berkeley student studying Electrical Engineering & Computer Sciences from Seattle, Washington.
                         I have a wide range of skills and interest areas, concentrated in software and hardware design.
                         I'm currently fascinated by Machine Learning and Big Data, and their applications to cutting edge technology.
@@ -56,6 +56,9 @@
                         <b>LinkedIn: </b> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/pranav-sukumar/">https://www.linkedin.com/in/pranav-sukumar/</a>
 
                     </p>
+                </div>
+                <div class="col-6 col-12-medium" style="width: 300px">
+                    <p> </p>
                 </div>
             </div>
                 
