--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
         
         <div class="inner">
             <h1>
-                <strong>Pranav Sukumar </strong><br />
-                UC Berkeley Electrical Engineering and Computer Science (EECS) 2023
+                <strong>
+                    Pranav Sukumar <br />
+                    UC Berkeley Electrical Engineering and Computer Science (EECS) 2023
+                </strong>
             </h1>
             <ul class="actions special" style="padding-bottom: 0px">
                 <li><a href="assets/PranavSukumarResume.pdf" class="button">Resume</a></li>
