made menu sticky, and added github link and fixed typos

--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
-<body class="is-preload">
-    <ul style="list-style-type: none; margin: 0; padding: 0; overflow: hidden; background-color: #333;">
-        <li style="border-right: 1px solid white; float: left;display: block; color: white; text-align: center; padding: 20px 10px; text-decoration: none"><a href="#home">Home</a></li>
-        <li style="border-right: 1px solid white; float: left;display: block; color: white; text-align: center; padding: 20px 10px; text-decoration: none"><a href="#about">About Me</a></li>
+<ul style="list-style-type: none; margin: 0; padding: 0; overflow: hidden; background-color: #333; position:sticky; top:0;z-index: 99 !important">
+    <li style="border-right: 1px solid white; float: left;display: block; color: white; text-align: center; padding: 20px 10px; text-decoration: none"><a href="#home">Home</a></li>
+    <li style="border-right: 1px solid white; float: left;display: block; color: white; text-align: center; padding: 20px 10px; text-decoration: none"><a href="#about">About Me</a></li>
 
-        <li style="border-right: 1px solid white; float: left;display: block; color: white; text-align: center; padding: 20px 10px; text-decoration: none"><a href="#projects">Projects</a></li>
-        <li style="border-right: 1px solid white; float: left;display: block; color: white; text-align: center; padding: 20px 10px; text-decoration: none"><a href="#work">Experience</a></li>
-    </ul>
+    <li style="border-right: 1px solid white; float: left;display: block; color: white; text-align: center; padding: 20px 10px; text-decoration: none"><a href="#projects">Projects</a></li>
+    <li style="border-right: 1px solid white; float: left;display: block; color: white; text-align: center; padding: 20px 10px; text-decoration: none"><a href="#work">Experience</a></li>
+</ul>
+<body class="is-preload">
+    
     <!-- Header -->
     <section id="header">
         
@@ -50,13 +51,15 @@
                         <h2><b>About Me</b></h2>
                     </header>
                     <p style="text-align: left">
-                        Hi! I am a freshman at UC Berkeley student studying Electrical Engineering & Computer Sciences from Seattle, Washington.
-                        I have a wide range of skills and interest areas, concentrated in software and hardware design.
+                        Hi! I am a freshman at UC Berkeley studying Electrical Engineering & Computer Sciences.
+                        I am from Seattle, Washington and have a wide range of skills and interest areas, concentrated in software and hardware design.
                         I'm currently fascinated by Machine Learning and Big Data, and their applications to cutting edge technology.
                         </br>
-                        </br>
+
                         <b>Email: </b> &nbsp; &nbsp; <a href="mailto:pranavsukumar@berkeley.edu">pranavsukumar@berkeley.edu</a>
+
                         </br>
+                        <b>Github: </b> &nbsp; &nbsp; <a href="https://github.com/Pranav-Sukumar"> https://github.com/Pranav-Sukumar </a>
                         </br>
                         <b>LinkedIn: </b> &nbsp; &nbsp; <a href="https://www.linkedin.com/in/pranav-sukumar/">https://www.linkedin.com/in/pranav-sukumar/</a>
 
@@ -161,9 +164,9 @@
                         <p>
                             As part of the Expedia Search and Suggest Team, I worked on both front-end and back-end capabilities to improve Expedia's homepage search experience. I used Java, JavaScript, and HTML/CSS to develop features such as:
                             <ol>
-                                <li>Categorizing the types of suggestions displayed so that in inline search suggestions, the user can distinguish between SEA as a city abbreviation and SEA as an airport code</li>
-                                <li>A customer feedback tool for the quality of search results</li>
-                                <li>Eliminating the unnecessary need for the user to explicitly grant location access to Expedia in the current location feature by creating a heuristic based current location option</li>
+                                <li style="border-right:0px">Categorizing the types of suggestions displayed so that in inline search suggestions, the user can distinguish between SEA as a city abbreviation and SEA as an airport code</li>
+                                <li style="border-right:0px">A customer feedback tool for the quality of search results</li>
+                                <li style="border-right:0px">Eliminating the unnecessary need for the user to explicitly grant location access to Expedia in the current location feature by creating a heuristic based current location option</li>
                             </ol>
 
                             About 700,000 customers per week interact with the features I built. I also participated in Expedia Hackathon 7.0 and had 4th most popular project.
