--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1>
                 <strong>
                     Pranav Sukumar <br />
-                    UC Berkeley Electrical Engineering and Computer Science (EECS) 2023
+                    UC Berkeley Electrical Engineering and Computer Science (EECS) 2023 Test
                 </strong>
             </h1>
             <ul class="actions special" style="padding-bottom: 0px">
