--- a/index.html
+++ b/index.html
@@ -141,12 +141,13 @@
                                 Computer Science Mentors at Berkeley
                             </h2>
                             <h3>
-                                Instructor </br>(Aug 2020 - Present)
+                                Mentor for Data Structures (CS 61B)  </br>(Aug 2020 - Present)
                             </h3>
                         </header>
-                        <p>
-                            Lead weekly sections teaching students concepts from Data Structures (CS 61B).
-                        </p>
+                        <ul>
+                            <li style = "border-right: 0px;">Course taught by Professor Paul Hilfinger.</li>
+                            <li style = "border-right: 0px;">Taught small sections of five students, reinforcing data structures and algorithms concepts like Object Oriented Programming, Runtime Analysis, Hashing, Trees, Shortest Path, Graph Traversal, Heaps, and Sorts.</li>
+                        </ul>
                     </div>
                     <div class="col-6 col-12-medium imp-medium">
                         <span class="image fit"><img src="images/csm.png" alt="" /></span>
@@ -164,9 +165,11 @@
                                 (Aug 2020 - December 2020)
                             </h3>
                         </header>
-                        <p>
-                            As a part of course staff for CS 61B, I reinforced data structures and algorithms concepts, answered software engineering and design questions, and helped students debug code in labs.
-                        </p>
+                        <ul>
+                            <li style = "border-right: 0px;">Course taught by Professor Paul Hilfinger.</li>
+                            <li style = "border-right: 0px;">Helped students debug Java projects and homework in labs.</li>
+                        </ul>
+                        
                     </div>
                     <div class="col-6 col-12-medium imp-medium">
                         <span class="image fit"><img src="images/61b_ai.png" alt="" /></span>
