--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             <h1>
                 <strong>
                     Pranav Sukumar <br />
-                    UC Berkeley Electrical Engineering and Computer Science (EECS)
+                    Columbia MS in Computer Science (Machine Learning Specialization) Class of 2025<br/>
+                    UC Berkeley BS in Electrical Engineering and Computer Science (EECS) Class of 2023
+                    
                 </strong>
             </h1>
             <ul class="actions special" style="padding-bottom: 0px">
@@ -53,11 +55,11 @@
                     </header>
                     <img src="images/ProfileUneditedSquare.png", style="max-width: 70%;">
                     <p style="text-align: left">
-                        Hi! I am a senior at UC Berkeley majoring in Electrical Engineering and Computer Sciences and Minoring in Data Science (Class of 2023). This website contains information about my personal projects and teaching materials I have created for classes I have taught at UC Berkeley.
+                        Hi! I am currently pursuing my MS in Computer Science at Columbia. I graduated from UC Berkeley in 2023 with my BS in Electrical Engineering and Computer Sciences (EECS) with a Minor in Data Science. This website contains information about my research projects, personal projects, teaching experiences, and industry experiences.
                         </br>
                          </br>
 
-                        <b>Email: </b> &nbsp; &nbsp; <a href="mailto:pranavsukumar@berkeley.edu">pranavsukumar@berkeley.edu</a>
+                        <b>Email: </b> &nbsp; &nbsp; <a href="mailto:pranav.sukumar@columbia.edu">pranav.sukumar@columbia.edu</a>
 
                         </br>
                         <b>Github: </b> &nbsp; &nbsp; <a href="https://github.com/Pranav-Sukumar"> https://github.com/Pranav-Sukumar </a>
