--- a/index.html
+++ b/index.html
@@ -104,6 +104,64 @@
                 </div>
             </div>
 
+            <div>
+                <div class="row gtr-">
+                    <div class="col-6 col-12-medium">
+                        <header class="major">
+                            <h2>
+                                UC Berkeley Game Theory (GamesCrafters) Lab
+                            </h2>
+                            <h3>Undergraduate Researcher <br/>(Aug 2022 - May 2023)</h3>
+
+                        </header>
+                        <ul>
+                            <li style = "border-right: 0px;">Worked on a project that combines augmented reality and game theory to aid in optimal play of a physical board game.</li>
+                            <li style = "border-right: 0px;">Implemented board game detection, built localization of the board game, and trained a neural network to detect game pieces.</li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+
+            <div>
+                <div class="row gtr-">
+                    <div class="col-6 col-12-medium">
+                        <header class="major">
+                            <h2>
+                                UC Berkeley Algorithms and Computing for Education (ACE) Lab
+                            </h2>
+                            <h3>Undergraduate Researcher <br/>(Aug 2021 - May 2022)</h3>
+
+                        </header>
+                        <ul>
+                            <li style = "border-right: 0px;">Designed and implemented algorithms for cheating detection and computer-based testing.</li>
+                            <li style = "border-right: 0px;"><a href="https://dl.acm.org/doi/abs/10.1145/3478432.3499113">Improved Testing of PrairieLearn Question Generators</a> abstract and poster published on ACM Digital Library.</li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+
+            <div>
+                <div class="row gtr-">
+                    <div class="col-6 col-12-medium">
+                        <header class="major">
+                            <h2>
+                                University of Washington Personal Robotics Lab
+                            </h2>
+                            <h3>Undergraduate Researcher <br/>(May 2020 - Dec 2020)</h3>
+
+                        </header>
+                        <ul>
+                            <li style = "border-right: 0px;">Worked with the Assistive Dexterous Arm robot that performs assisted feeding for people with upper-extremity impairments.</li>
+                            <li style = "border-right: 0px;">Wrote a Hidden Markov Model (HMM) to predict when a person needs to be fed by the robotic arm.</li>
+                            <li style = "border-right: 0px;">Used computer vision algorithms to extract features for the HMM including body pose and facial expressions.</li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+
             
         </div>
 
@@ -382,6 +440,7 @@
                                 <li style = "border-right: 0px;">The augmented reality application replaced a complex network of proprietary cameras, lighting devices, and overhead canopies.</li>
                                 <li style = "border-right: 0px;">Research project that involved structuring and defining the research problem from a one-line description, outlining goals for the project, and defining measures of success.</li>
                                 <li style = "border-right: 0px;">Developed workcell localization, interaction detection, and a user interface in Augmented Reality using C#.</li>
+                                <li style = "border-right: 0px;">Applied for a design patent; This project saves ~ $1 million per Amazon Delivery Center.</li>
 
                             </ul>
                         </p>
