updates to website

--- a/index.html
+++ b/index.html
@@ -400,6 +400,34 @@
                     <div class="col-6 col-12-medium">
                         <header class="major">
                             <h2>
+                                Databricks
+                            </h2>
+                            <h3>
+                                Software Engineer Intern <br />(May 2024 - Aug 2024)
+                            </h3>
+                        </header>
+                        <p>
+                            Summer internship with Databricks (Delta Sharing Team):
+                            <ul>
+                                <li style = "border-right: 0px;">Worked on Delta Sharing which is a part of the Delta Lake foundation.</li>
+                                <li style = "border-right: 0px;">Added support to the open-source Delta Sharing server and client-side connector to support sharing tables with Deletion Vector and Column Mapping features. </li>
+                                <li style = "border-right: 0px;">Added limit and JSON predicate hint pushdown on the server to optimize query processing.</li>
+                                <li style = "border-right: 0px;">This was requested by 250+ Databricks customers and my work can be found on the  <a href="https://github.com/delta-io/delta-sharing/commits/main/?author=pranavsuku-db">Delta Sharing open source repository</a>.</li>
+                                <li style = "border-right: 0px;">Prototyped cloud token sharing in open-source Delta Sharing client-side connector as a stretch project. </li>
+                            </ul>
+                        </p>
+                    </div>
+                    <div class="col-6 col-12-medium imp-medium">
+                        <span class="image fit"><img src="images/databricks_img.png" alt="" /></span>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div class="row gtr-150">
+                    <div class="col-6 col-12-medium">
+                        <header class="major">
+                            <h2>
                                 Amazon Robotics
                             </h2>
                             <h3>
